--- a/rsocket-server/pom.xml
+++ b/rsocket-server/pom.xml
@@ -41,6 +41,7 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+            <version>[1.18.16,2.0.0)</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
